	- renamed some defs,folders, assemblies stuff variables etc. to sd_adv_powergen_ ...
	- removed german language files
	- set all buildings to no ai chill destination
	- added mass for buildings
	- set research to x 13 and 14 in the tab (after ship at the end)
	- changed nuclear power to adv nuclar power (building+research)

- 25/12/2016

	- moved abstract into own base xml
	- adjusted weights, still way over the material used to build, but should be better
		adv wind: 500
		adv solar: 450
		adv geo: 1000
		adv nuclear: 1250
	- updated descriptions to changed windpower (6k -> 4k)
	- updated german language files

- 28/12/2016

	- adjusted the costs for all the buildings to new market values in a16

- 06/01/2017

	- fixed the xml tag Worktobuild, had old one here, which resulted in instant buildtimes

- 29/05/2017

	- target version update in about file
	- recompiled the assemblie, but no changes had to be done there
	- still small error exception in miniaturiation of solar/nuclear power plants
	- added chinesesimplyfied language files thx to WishingLaws

- 29/12/2017

	- update to b18
	- root <Defs> fix
	- added research tab
	- adjusted costs overall:
		- mostly adds adv component, changes other costs a bit to hold overall wealth value
		- nuclear about 10k higher workcost
	- removed ignore needs power xml tag
	- recompiled code, but no changes there

10/01/2018

	- adv winderturbine description -> 6k max not 4k

14/01/2018

	- added modsync file

10/07/2018

	- russian translation file added by Hanabishi from github

22/10/2018

	Rimworld 1.0 update
	- updated assembly
	- xml fixes, update to 1.0
	- added construction skill requirements, same as vanilla counterparts (nuclar=geo)
	- components, just replaced with industrial/spacer variants
	- added thincategorie power to all
	- added allow autoroof false to adv windturbine
	- for now removed modsync file, since modninja was replaced by another, havent looked into that