@@ -5,7 +5,7 @@
 	<targetVersion>1.0.2059</targetVersion>
 	<url>https://ludeon.com/forums/index.php?topic=26276.0</url>
 	<description>"advanced powergeneration"
-	Ver.: 1.0-1.0.0
+	Ver.: 1.0-1.0.1
 	
 	a light in every corner, an extra workbench there, maybe another cooking stove - wondering where your power went?
 	
@@ -14,5 +14,11 @@
 	
 	Download links for Dropbox (current or older versions) or Steamworkshop link for current Rimworld version can be found in the ludeon forum thread linked above.
 	
-	Languages: english, german, ChineseSimplified (thx to WishingLaws), Russian (thx to Hanabishi)</description>
+	additional languages:
+	- ChineseSimplified by WishingLaws
+	- Russian by Hanabishi
+	- Japanese by Proxyer
+	- spanish by CANALETA
+	- spanish latin by CANALETA
+	- german by sulusdacor</description>
 </ModMetaData>
