@@ -1,0 +1,9 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<LanguageData>
+
+  <!-- To add a research tab, make a new ResearchTabDef here and then set the <tab> field of your research project to match it -->
+
+  <sd_adv_powergen_ResearchTab.label>[sd]adv.powergen</sd_adv_powergen_ResearchTab.label>
+
+
+</LanguageData>
